// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scalewayApi deleteTag can delete the tag from the API 1`] = `
Object {
  "created_at": "2021-01-03",
  "id": "tag-id-1",
  "name": "tag-name-1",
}
`;

exports[`scalewayApi deleteTag can delete the tag from the API 2`] = `
Array [
  "https://api.scaleway.com/registry/v1/regions/scw-region/tags/tag-id-1?force=true",
  Object {
    "headers": Object {
      "x-auth-token": "scw-token",
    },
    "method": "DELETE",
  },
]
`;

exports[`scalewayApi deleteTag throws an error if the deletion from the API failed 1`] = `[Error: Could not delete tag from the API]`;

exports[`scalewayApi getImage can get the image from the API 1`] = `
Object {
  "id": "image-id",
  "name": "image-name",
}
`;

exports[`scalewayApi getImage can get the image from the API 2`] = `
Array [
  "https://api.scaleway.com/registry/v1/regions/scw-region/images?name=image-name",
  Object {
    "headers": Object {
      "x-auth-token": "scw-token",
    },
  },
]
`;

exports[`scalewayApi getImage throws an error if the image is not in the API 1`] = `[Error: Could not get image from the API]`;

exports[`scalewayApi listTags can list the tags from the API 1`] = `
Array [
  Object {
    "created_at": "2021-01-03",
    "id": "tag-id-1",
    "name": "tag-name-1",
  },
  Object {
    "created_at": "2021-01-02",
    "id": "tag-id-2",
    "name": "tag-name-2",
  },
  Object {
    "created_at": "2021-01-01",
    "id": "tag-id-3",
    "name": "tag-name-3",
  },
]
`;

exports[`scalewayApi listTags can list the tags from the API 2`] = `
Array [
  "https://api.scaleway.com/registry/v1/regions/scw-region/images/image-id/tags?page_size=100&order_by=created_at_asc",
  Object {
    "headers": Object {
      "x-auth-token": "scw-token",
    },
  },
]
`;

exports[`scalewayApi listTags throws an error if there are no tags in the API 1`] = `[Error: Could not list tags from the API]`;
